[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
gloo-console = "0.3"
gloo-net = "0.6"
gloo-storage = "0.3"
serde = "1.0"
serde_json = "1.0"
